--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@
     --button-color: #efb6df;
     --link-color: #05364d;
     --text-color: #212529;
+    --subtitle-color: #888;
     --white-color: #fff;
 }
 
@@ -74,19 +75,46 @@ h1, h2, h3, h4, h5, h6 {
 .button {
     background: linear-gradient(to right, #1345e6 30%, #ed239f);
     border: 0;
+    border-radius: 0.25rem; /* 0.25 * 20px = 1px */
     color: var(--white-color);
-    font-weight: 500;
-    font-size: 0.7rem;
-    line-height: 2.5rem;
-    padding: 0 1.9rem;
     cursor: pointer;
+    font-weight: 500;
+    font-size: 0.7rem; /* 0.7 * 20px = 15px */
+    line-height: 2.5rem; /* 2.5 * 20px = 50px */
+    padding: 0 1.9rem; /* 1.9 * 20px = 38px */
     text-transform: uppercase;
-    border-radius: 0.25rem;
-    transition: 2s;
 }
 
 .button:hover {
     background: linear-gradient(to left, #1345e6 30%, #ed239f);
+}
+
+.shared {
+    max-width: 370px;
+    width: 100%;
+}
+
+.subtitle {
+    color: var(--subtitle-color);
+    letter-spacing: 2px;
+    font-weight: 500;
+    margin-bottom: 0.5rem; /* 0.5 * 20px = 10px */
+    text-transform: uppercase;
+}
+
+.title {
+    font-size: 2.1rem; /* 2.1 * 20px = 42px */
+    font-weight: 700;
+    margin-bottom: 1.5rem; /* 1.5 * 20px = 30px */
+    line-height: 2.6rem; /* 2.6 * 20px = 54px */
+    text-transform: capitalize;
+}
+
+.text {
+    color: var(--subtitle-color);
+    font-size: 0.8rem; /* 0.8 * 20px = 16px */
+    letter-spacing: 0.125rem; /* 0125 * 20px = 1px */
+    margin-bottom: 1.5rem; /* 1.5 * 20px = 30px */
 }
 /* ===== END GLOBAL STYLES ===== */
 
@@ -158,7 +186,47 @@ h1, h2, h3, h4, h5, h6 {
 .main-section__position {
     font-size: 1.2rem; /* 1.2 * 20px = 24px */
     font-weight: 300;
-    margin-bottom: 0;
+    margin-bottom: 3rem; /* 3 * 20px = 60px */
+}
+
+.socials {
+    margin-bottom: 3rem; /* 3 * 20px = 60px */
+}
+
+.socials > a {
+    color: rgb(3, 169, 244);
+    font-size: 1rem; /* 1 * 20px = 20px */
+    margin-right: 0.8rem; /* 0.8 * 20px = 16px */
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.social-icon {
+    width: 20px;
+    height: 20px;
+}
+
+.about-me {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.statisitcs {
+    display: flex;
+}
+
+.statistic {
+    background-color: #f3f3f3;
+    color: #00bcd4;
+    max-width: 130px;
+    width: 100%;
+    padding: 1.5rem 0.7rem;
+    text-align: center;
+}
+
+.middle {
+    margin: 0 1.5rem;
+    height: 90px;
 }
 
 /* ===== END MAIN SECTION ===== */
